
MNEMOSYNE 1.0

(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)

-Mnemosyne can now be run from a USB drive. Copy both the Mnemosyne directory
 from C:\Program Files to your USB drive, as well as your .mnemosyne 
 directory from inside your home directory. Create a shortcut on the USB 
 drive (say it's called F) which reads
   F:\Mnemosyne\mnemosyne.exe -d F:\.mnemosyne
-automatically back up the database to XML on exit. The last five backups 
 are kept in .mnemosyne/backup.
-increase the maximum value of 'increase size of non-latin characters'
 to 200 (requested by Mike Charlton).
-don't count inactive cards in the grade distribution in the statistics
 window (reported by Joonatan Kaartinen).
-removed a few rarely used options from the configuration dialog and
 placed them in .mnemosyne/config.py, a new file which can be used to
 set these and other rarely used options.
-improved tooltips.
-more verbose error messages when an import failed, showing the line that
 failed to parse.
-new logo, thanks to a contributor whose name sadly got lost in the 
 demise of the open-collab site.
-new icons, based on the Crystal iconset.
-added support for Unicode filenames.
-implemented a basic plugin system. The directory .mnemosyne/plugins
 can contain python scripts which will be executed at run time and
 which can be used to customise Mnemosyne or add new features.
-don't exit when final save failed (requested by lebowski_404).
-added more supported sound and picture formats.
-fixed 'Save as' option.

	
MNEMOSYNE 0.9.10 : 2007-10-28

-added 3-sided cards, to make dealing with vocabulary in foreign scripts 
 easier. Right clicking the text field in 'add cards' gives you to option
 to switch to 3-sided card input, which replaces the question and answer
 fields by 3 fields: written form, pronunciation, translation. After 
 selecting an initial grade, 2 cards will be added:

  Q: written form
  A: pronunciation