@@ -1,0 +1,45 @@
+##############################################################################
+#
+# Main widget for Mnemosyne <Peter.Bienstman@UGent.be>
+#
+##############################################################################
+
+import sys, os
+from qt import *
+
+
+
+##############################################################################
+#
+# Display extra errors generated by the library.
+#
+##############################################################################
+
+def messagebox_errors(s):
+    QMessageBox.critical(None,
+                         qApp.translate("Mnemosyne", "Mnemosyne"),
+                         QString(s),
+                         qApp.translate("Mnemosyne", "&OK"),
+                         "", "", 0, -1)
+
+
+
+##############################################################################
+#
+# queryOverwriteFile
+#
+##############################################################################
+
+def queryOverwriteFile(fileName):
+    
+    status = QMessageBox.warning(None,
+                                 qApp.translate("Mnemosyne", "Mnemosyne"),
+                                 qApp.translate("Mnemosyne", "File exists: ")\
+                                 .append(QString("\n" + fileName)),
+                                 qApp.translate("Mnemosyne", "&Overwrite"),
+                                 qApp.translate("Mnemosyne", "&Cancel"),
+                                 "", 1, -1)
+    if status == 0:
+        return True
+    else:
+        return False
